# anatomist-fmri

./: README.md  pyproject.toml
python/ananil/: __init__.py  __main__.py  ananil.py
