[project]
name = "anatomist-fmri"
version = "1.0.0"
authors = [
    {name = "DR", email = "contact@brainvisa.info"},
]
description = "anatomist-fmri"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CeCILL-v2"}
classifiers = [
    "Intended Audience :: Users",
    "License :: OSI Approved",
    "Development Status :: 5 - Production/Stable",
    "Environment :: GUI",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: French",
    "Topic :: Brain research",
]
dependencies = [
  'PyQt5', 'anatomist'
]

[project.optional-dependencies]
doc = [
    "sphinx >=1.0",
]

[project.urls]
homepage = "https://github.com/denisri/anatomist-fmri"
repository = "https://github.com/denisri/anatomist-fmri"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#where = ["python"]

#[tool.setuptools.package-data]
#twingame = ['share/*']

[tool.brainvisa-cmake]

